# bugshan

./: .gitignore  CMakeLists.txt
cmake/: BugShan_IO.cmake  BugShan_Reflection.cmake
example/io/: main  main.cpp  makefile
example/pointers/: main  main.cpp  makefile
example/reflection/: Animal.cpp  Animal.h  Per.cs  main  main.cpp  makefile
include/bugshan/: BugShan.h  TypeDef.h
include/bugshan/io/: Directory.h  File.h  FileStream.h
include/bugshan/pointers/: AutoPtr.h  Ptr.h  RefPtr.h
include/bugshan/reflection/: Field.h  Method.h  Runtime.h  Type.h  TypeDecl.h
include/bugshan/utility/: AutoRunHelper.h  DisableOnHeap.h  Singleton.h
source/io/: Directory.cpp  File.cpp  FileStream.cpp  Path.cpp  Path.h
source/reflection/: Runtime.cpp  Type.cpp  TypeDecl.cpp
